Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/XML/Tabla/tablaGrammar.java
/* tablaGrammar.java */
/* Generated By:JavaCC: Do not edit this line. tablaGrammar.java */
package Analisis.XML.Tabla;

import Funciones.XML.*;
import Static.*;
import java.util.ArrayList;

public class tablaGrammar implements tablaGrammarConstants {
  public static void main(String args[]) throws ParseException {
    tablaGrammar parser = new tablaGrammar(System.in);
    parser.S();
  }

  final public ArrayList<ArrayList<Columna>> S() throws ParseException {ArrayList<ArrayList<Columna>> c = new ArrayList<ArrayList<Columna>>();
System.out.println("Comienza!!");
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_ROW_IZQ:{
      c = L_ROW();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
System.out.println("Exito!!"); {if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<ArrayList<Columna>> L_ROW() throws ParseException {ArrayList<ArrayList<Columna>> c = new ArrayList<ArrayList<Columna>>(); ArrayList<ArrayList<Columna>> c2 = new ArrayList<ArrayList<Columna>>();
    c = ROW();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_ROW_IZQ:{
      c2 = L_ROW();
for(int i=0; i < c2.size(); i++){
                        c.add(c2.get(i));
                    }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<ArrayList<Columna>> ROW() throws ParseException {ArrayList<Columna> c = new ArrayList<Columna>();
    jj_consume_token(T_ROW_IZQ);
    c = L_CAMPOS();
    jj_consume_token(T_ROW_DER);
ArrayList<ArrayList<Columna>> row = new ArrayList<ArrayList<Columna>>();
                    row.add(c);
                    {if ("" != null) return row;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Columna> L_CAMPOS() throws ParseException {ArrayList<Columna> c = new ArrayList<Columna>(); ArrayList<Columna> c2 = new ArrayList<Columna>();
    c = CAMPO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID_IZQ:{
      c2 = L_CAMPOS();
for(int i=0; i < c2.size(); i++){
                        c.add(c2.get(i));
                    }
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Columna> CAMPO() throws ParseException {Token t,c; ArrayList<Columna> o = new ArrayList<Columna>();
    c = jj_consume_token(ID_IZQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CADENA:{
      t = jj_consume_token(CADENA);
o.add(new Columna(c.image.substring(1, c.image.length() - 1).trim(), t.image.substring(1, t.image.length() - 1).trim()));
      break;
      }
    case ID_IZQ:{
      o = L_OBJETO();
columnaObjeto co = new columnaObjeto(o);
                                    o = new ArrayList<Columna>();
                                    o.add(new Columna(c.image.substring(1, c.image.length() - 1).trim(), co));
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(ID_DER);
{if ("" != null) return o;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Columna> L_OBJETO() throws ParseException {ArrayList<Columna> c = new ArrayList<Columna>(); ArrayList<Columna> c2 = new ArrayList<Columna>();
    c = OBJETO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID_IZQ:{
      c2 = L_OBJETO();
for(int i=0; i < c2.size(); i++){
                        c.add(c2.get(i));
                    }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Columna> OBJETO() throws ParseException {Token t,i;
    i = jj_consume_token(ID_IZQ);
    t = jj_consume_token(CADENA);
    jj_consume_token(ID_DER);
ArrayList<Columna> c = new ArrayList<Columna>();
                                    c.add(new Columna(i.image.substring(1, i.image.length() - 1).trim(), t.image.substring(1, t.image.length() - 1).trim()));
                                    {if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public tablaGrammarTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2,0x2,0x10,0x18,0x10,};
   }

  /** Constructor with InputStream. */
  public tablaGrammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public tablaGrammar(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new tablaGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public tablaGrammar(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new tablaGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public tablaGrammar(tablaGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(tablaGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[10];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 5; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 10; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
